...
                }}
              />
            );
          }

          let title = 'Discover';
          if (route.name === 'Search') title = 'Find Services';
          else if (route.name === 'Bookings') title = 'My Bookings';
          else if (route.name === 'Messages') title = 'Messages';
          else if (route.name === 'Profile') title = 'My Profile';

          return <CurvedHeader title={title} />;
        },
      })}
    >
      <Tab.Screen
...
